# whisper-jni

./: .gitignore  CMakeLists.txt  README.md  build.gradle  build_android.sh  local.properties  settings.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/java/io/github/givimad/whisperjni/: WhisperGrammar.java  WhisperJNI.java
src/main/java/io/github/givimad/whisperjni/internal/: LibraryUtils.java
src/main/native/: io_github_givimad_whisperjni_WhisperJNI.cpp
